Updated traefik yaml and added oauth.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,94 @@
-SERVER_DIR="/srv/"
-MY_EMAIL=my@email.com
-DOMAINNAME=domain.com
+##### PORTS
+
+DOZZLE_PORT=
+HEIMDALL_PORT=
+HEIMDALL_LOCAL_PORT=
+NETDATA_PORT=
+MYOWNSITE_MARIADB_PORT=
+MYOWNSITE_WORDPRESS_PORT=
+MYOWNSITE_WORDPRESS_SSL_PORT=
+NEXTCLOUD=
+NEXTCLOUDMARIADB=
+PORTAINER_PORT=
+STATPING_PORT=
+BLOG_MARIADB_PORT=
+BLOG_WORDPRESS_PORT=
+BLOG_WORDPRESS_SSL_PORT=
+TRANSMISSIONOPENVPN=
+TRANSMISSIONOPENVPNGUI=
+WIRESHARK_PORT=
+ZONEMINDER_PORT=
+ZONEMINDER_WEBSOCKET_PORT=
+
+#################### SYSTEM
+
+# Get docker group, run: grep docker /etc/group | cut -d ':' -f 3
+
+HOST_NAME=
+MY_EMAIL=
+PUID=
+PGID=
+TZ=
+
+#################### VPN
+
+OPENVPN_PROVIDER=
+OPENVPN_USERNAME=
+OPENVPN_PASSWORD=
+
+#################### DIRECTORIES
+
+DOCKERDIR="/Docker"
+PERMDIR="/Vhmc"
+EXTERNALDIR="/External"
+ZMCACHEDIR="/ZoneMinder"
+NEXTCLOUDDATADIR="/NextCloud"
+
+#################### CLOUFDLARE
+
+CLOUDFLARE_EMAIL=
+CLOUDFLARE_API_KEY=
+CLOUDFLARE_API_TOKEN=
+
+#################### MAIN DOMAIN
+
+DOMAINNAME=yourdomain.com
+
+MARIADB_ROOT_PASSWORD=
+
+WORDPRESS_DB_NAME=
+WORDPRESS_DB_USER=
+WORDPRESS_DB_PASSWORD=
+
+#################### SECOND DOMAIN
+
+DOMAINNAME_BLOG=anotherdomain.com
+
+MARIADB_BLOG_ROOT_PASSWORD=
+
+WORDPRESS_BLOG_DB_NAME=
+WORDPRESS_BLOG_DB_USER=
+WORDPRESS_BLOG_DB_PASSWORD=
+
+#################### GOOGLE OAUTH
+
+OAUTH_SESSION_LIFETIME=(seconds)
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+OAUTH_SECRET=
+
+OAUTH_EMAIL_1=
+OAUTH_EMAIL_2=
+OAUTH_EMAIL_3=
+
+#################### NEXTCLOUD
+
+MARIADB_ROOT_PASSWORD_NEXTCLOUD=
+MARIADB_DATABASE_NEXTCLOUD=
+MARIADB_USER_NEXTCLOUD=
+MARIADB_PASSWORD_NEXTCLOUD=
+
+#################### LINKS
+
+# OAuth Secret: https://www.browserling.com/tools/random-string
