Moving to correct location rules and letsencrypt
Files were located at root level, however they should be inside the traefik2proxy container folder.

In addition, container and network for traefik were renamed.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .env
 traefik.log
-letsencrypt/acme.json
-rules/middlewares-chains.toml
-rules/middlewares.toml
+traefik2proxy/letsencrypt/acme.json
+traefik2proxy/rules/middlewares-chains.toml
+traefik2proxy/rules/middlewares.toml
