Adding middleware keyword and retry to chains.

--- a/docker-compose-traefik2.yml
+++ b/docker-compose-traefik2.yml
@@ -50,9 +50,9 @@ services:
       - --certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json # File must have chmod 600
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
-      - "$DOCKERDIR/traefik2/rules:/rules"
-      - "$DOCKERDIR/traefik2/letsencrypt:/letsencrypt"
-      - "$DOCKERDIR/traefik2/traefik.log:/traefik.log"
+      - "$DOCKERDIR/traefik2/traefik2proxy/rules:/rules"
+      - "$DOCKERDIR/traefik2/traefik2proxy/letsencrypt:/letsencrypt"
+      - "$DOCKERDIR/traefik2/traefik2proxy/traefik.log:/traefik.log"
     labels:
       - "traefik.enable=true"
       # Router
@@ -61,7 +61,7 @@ services:
 #      - "traefik.http.routers.traefik.tls=true"
       - "traefik.http.routers.traefik-rtr.tls.certresolver=letsencrypt"
       # Middlewares
-#      - "traefik.http.routers.traefik-rtr.middlewares=chain-oauth@file"
+      - "traefik.http.routers.traefik-rtr.middlewares=chain-oauth@file"
       # Service
       - "traefik.http.routers.traefik-rtr.service=api@internal"
       # Domains
