Folder path updates.

--- a/.env.example
+++ b/.env.example
@@ -38,11 +38,10 @@ OPENVPN_PASSWORD=
 
 #################### DIRECTORIES
 
-DOCKERDIR="/Docker"
-PERMDIR="/Vhmc"
-EXTERNALDIR="/External"
-ZMCACHEDIR="/ZoneMinder"
-NEXTCLOUDDATADIR="/NextCloud"
+PROXYDIR="/Docker/traefik2"
+SERVICESDIR="/Docker/traefik2services"
+ZMCACHEDIR="/zoneminder_video"
+NEXTCLOUDDATADIR="/nextcloud_data"
 
 #################### CLOUFDLARE
 
