Adding several services, middlewares and variables.

--- a/.env.example
+++ b/.env.example
@@ -40,8 +40,13 @@ OPENVPN_PASSWORD=
 
 PROXYDIR="/Docker/traefik2"
 SERVICESDIR="/Docker/traefik2services"
-ZMCACHEDIR="/zoneminder_video"
+
+MYOWNSITEDIR="/MyOwnSite"
+BLOGDIR="/Blog"
+
+ZMVIDEODIR="/zoneminder_video"
 NEXTCLOUDDATADIR="/nextcloud_data"
+DOWNLOADS="/downloads"
 
 #################### CLOUFDLARE
 
