--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ traefik2proxy/traefik.log
 traefik2proxy/letsencrypt/acme.json
 traefik2proxy/rules/middlewares-chains.toml
 traefik2proxy/rules/middlewares.toml
+traefik2proxy/rules/service-openmediavault.toml
