--- a/docker-compose-traefik2.yml
+++ b/docker-compose-traefik2.yml
@@ -39,13 +39,13 @@ services:
       - --providers.docker.swarmMode=false
       - --providers.file.directory=/rules # Load dynamic configuration from one or more .toml or .yml files in a directory.
       - --providers.file.watch=true # Only works on top level files in the rules folder
-      # Lets Encrypt Http Challenge
-#      - --certificatesresolvers.letsencrypt.acme.httpchallenge=true
-#      - --certificatesresolvers.letsencrypt.acme.httpchallenge.entrypoint=web
-      # Lets Encrypt Tls Challenge (might need comment all references to port 80 and entrypoint.web)
-      - --certificatesresolvers.letsencrypt.acme.tlschallenge=true
+      # Lets Encrypt HTTP Challenge (might need to enable reference to port 80 and entrypoint.web)
+      - --certificatesresolvers.letsencrypt.acme.httpchallenge=true
+      - --certificatesresolvers.letsencrypt.acme.httpchallenge.entrypoint=web
+      # Lets Encrypt TLS Challenge (might need comment all references to port 80 and entrypoint.web)
+#      - --certificatesresolvers.letsencrypt.acme.tlschallenge=true
       # Lets Encrypt General Config
-#      - --certificatesresolvers.letsencrypt.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory # Only for testing
+      - --certificatesresolvers.letsencrypt.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory # Only for testing
       - --certificatesresolvers.letsencrypt.acme.email=$MY_EMAIL
       - --certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json # File must have chmod 600
     volumes:
@@ -58,17 +58,17 @@ services:
       # Router
       - "traefik.http.routers.traefik-rtr.rule=Host(`traefik.$DOMAINNAME`)"
       - "traefik.http.routers.traefik-rtr.entrypoints=websecure"
-#      - "traefik.http.routers.traefik.tls=true"
+      - "traefik.http.routers.traefik-rtr.tls=true"
       - "traefik.http.routers.traefik-rtr.tls.certresolver=letsencrypt"
-      # Middlewares
+      # Middleware
       - "traefik.http.routers.traefik-rtr.middlewares=chain-oauth@file"
       # Service
       - "traefik.http.routers.traefik-rtr.service=api@internal"
       # Domains
-      - "traefik.http.routers.traefik-rtr.tls.domains[0].main=$DOMAINNAME"
-      - "traefik.http.routers.traefik-rtr.tls.domains[0].sans=*.$DOMAINNAME"
-      - "traefik.http.routers.traefik-rtr.tls.domains[1].main=$DOMAINNAME_BLOG"
-      - "traefik.http.routers.traefik-rtr.tls.domains[1].sans=*.$DOMAINNAME_BLOG"
+#      - "traefik.http.routers.traefik-rtr.tls.domains[0].main=$DOMAINNAME"
+#      - "traefik.http.routers.traefik-rtr.tls.domains[0].sans=*.$DOMAINNAME"
+#      - "traefik.http.routers.traefik-rtr.tls.domains[1].main=$DOMAINNAME_BLOG"
+#      - "traefik.http.routers.traefik-rtr.tls.domains[1].sans=*.$DOMAINNAME_BLOG"
       # Http to Https Redirect
       - "traefik.http.routers.http-catchall-rtr.rule=hostregexp(`{any:.+}`)"
       - "traefik.http.routers.http-catchall-rtr.entrypoints=web"
@@ -103,12 +103,59 @@ services:
       - DEFAULT_PROVIDER=google
     labels:
       - "traefik.enable=true"
-      ## HTTP Routers
+      # Router
       - "traefik.http.routers.oauth-rtr.rule=Host(`oauth.$DOMAINNAME`)"
       - "traefik.http.routers.oauth-rtr.entrypoints=websecure"
+      - "traefik.http.routers.oauth-rtr.tls=true"
       - "traefik.http.routers.oauth-rtr.tls.certresolver=letsencrypt"
-      ## Middlewares
+      # Middleware
       - "traefik.http.routers.oauth-rtr.middlewares=chain-oauth@file"
-      ## HTTP Services
+      # Service
       - "traefik.http.routers.oauth-rtr.service=oauth-svc"
       - "traefik.http.services.oauth-svc.loadbalancer.server.port=4181"
+
+  # Cloudflare DDNS - Dynamic DNS Updater
+  cf-ddns:
+    container_name: cf-ddns
+    image: oznu/cloudflare-ddns:latest
+    restart: always
+    security_opt:
+      - no-new-privileges:true
+    environment:
+      - API_KEY=$CLOUDFLARE_API_TOKEN
+      - ZONE=$DOMAINNAME
+      - PROXIED=true
+      - RRTYPE=A
+      - DELETE_ON_STOP=false
+      - DNS_SERVER=1.1.1.1
+
+  # Dozzle - Real-time Docker Log Viewer
+  dozzle:
+    image: amir20/dozzle:latest
+    container_name: dozzle
+    restart: unless-stopped
+    networks:
+      - t2proxy
+    security_opt:
+      - no-new-privileges:true
+    ports:
+      - "$DOZZLE_PORT:8080"
+    environment:
+      DOZZLE_LEVEL: info
+      DOZZLE_TAILSIZE: 300
+#      DOZZLE_FILTER: "status=running"
+#      DOZZLE_FILTER: "label=log_me" # limits logs displayed to containers with this label
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    labels:
+      - "traefik.enable=true"
+      # Router
+      - "traefik.http.routers.dozzle-rtr.rule=Host(`dozzle.$DOMAINNAME`)"
+      - "traefik.http.routers.dozzle-rtr.entrypoints=websecure"
+      - "traefik.http.routers.dozzle-rtr.tls=true"
+      - "traefik.http.routers.dozzle-rtr.tls.certresolver=letsencrypt"
+      # Middleware
+      - "traefik.http.routers.dozzle-rtr.middlewares=chain-oauth@file"
+      # Service
+      - "traefik.http.routers.dozzle-rtr.service=dozzle-svc"
+      - "traefik.http.services.dozzle-svc.loadbalancer.server.port=8080"
