Added NextCloud configuration.

--- a/.env.example
+++ b/.env.example
@@ -45,7 +45,7 @@ MYOWNSITEDIR="/MyOwnSite"
 BLOGDIR="/Blog"
 
 ZMVIDEODIR="/zoneminder_video"
-NEXTCLOUDDATADIR="/nextcloud_data"
+NEXTCLOUDSTORAGEDIR="/nextcloud_storage"
 DOWNLOADS="/downloads"
 
 #################### CLOUFDLARE
