Renamed traefik to traefikproxy yml.

--- a/docker-compose-traefik2-proxy.yml
+++ b/docker-compose-traefik2-proxy.yml
@@ -46,9 +46,10 @@ services:
 #      - --certificatesresolvers.letsencrypt.acme.tlschallenge=true
       # Lets Encrypt DNS Challenge (add environment variables and tls.domains)
       - --certificatesResolvers.letsencrypt.acme.dnsChallenge.provider=cloudflare
+      - --certificatesResolvers.letsencrypt.acme.dnsChallenge.delayBeforeCheck=0
       - --certificatesResolvers.letsencrypt.acme.dnsChallenge.resolvers=1.1.1.1:53,1.0.0.1:53
       # Lets Encrypt General Config
-      - --certificatesresolvers.letsencrypt.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory # Only for testing
+#      - --certificatesresolvers.letsencrypt.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory # Only for testing
       - --certificatesresolvers.letsencrypt.acme.email=$CLOUDFLARE_EMAIL
       - --certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json # File must have chmod 600
     volumes:
