Fixing certificate issues.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
+# General
 .env
 
 # Traefik
 traefik2proxy/traefik.log
-traefik2proxy/letsencrypt/acme.json
+traefik2proxy/letsencrypt/acme*
 traefik2proxy/rules/middlewares-chains.toml
 traefik2proxy/rules/middlewares.toml
 traefik2proxy/rules/service-openmediavault.toml
+
+# Include
+!traefik2proxy/letsencrypt/acme.json.example
