PhpMyAdmin for my own site.

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ NETDATA_PORT=
 MYOWNSITE_MARIADB_PORT=
 MYOWNSITE_WORDPRESS_PORT=
 MYOWNSITE_WORDPRESS_SSL_PORT=
+MYOWNSITE_PHPMYADMIN=
 NEXTCLOUD=
 NEXTCLOUDMARIADB=
 PORTAINER_PORT=
